Provide support for hiding specific mods, both on the client and on the server side.